welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: value || is not a member of Unit
  if ( verif(a) || verif(b) || verif(c) ){
                ^hasTeen:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true;
           ^hasTeen:11: warning: enclosing method verif has result type Unit: return value discarded
    return true;
    ^hasTeen:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false;
           ^hasTeen:13: warning: enclosing method verif has result type Unit: return value discarded
    return false;
    ^